[tool.poetry]
name = "python-poetry-template"
version = "0.1.0"
description = ""
authors = ["Asterios Raptis <asteri.raptis@gmail.com>"]
readme = "README.md"
packages = [
    { include = "scripts" }
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.0.0"
mypy = "^1.10.0"
isort = "^5.13.2"
pre-commit = "^3.7.0"
pytest = "^8.3.5"
pytest-cov = "^4.1.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
template-script = "scripts.template_script:main"
